I made my first web portfolio

--- a/welcone.html
+++ b/welcone.html
@@ -8,16 +8,22 @@
 <body>
 <table border ="1">
     <tr>
+        <thead>
+       
         <th colspan="2">Welcome to Our Website</th>
-        <th rowspan="1">This is a table</th>
+        <th rowspan="3">This is a table</th>
+        </thead> 
     </tr>
     <tr>
+        <tbody>
         <td>Row 1, Cell 1</td>
         <td>Row 1, Cell 2</td>
+        </tbody>
     </tr>
     <tr>
-        <td>Row 2, Cell 1</td>
-        <td>Row 2, Cell 2</td>
+        <td>More details 1</td>
+        <td>More details 2</td>
+    </tr>
 </table>
 </body>
 </html>
